[tool.poetry]
name = "gen3users"
version = "0.9.3"
description = "Utils for Gen3 Commons user management"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/gen3utils"
include = [
  "CHANGELOG.md",
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
cdislogging = "^1"
click = "*"
pyyaml = "^6"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
s3log = ["aiobotocore"]  # install with `poetry install -E s3log`
